# coriolis-pdk-ihpsg13g2

./: build-LIP6.sh  meson.build  pyproject.toml
packaging/: coriolis-pdk-ihpsg13g2-rpmlintrc  coriolis-pdk-ihpsg13g2.dsc  coriolis-pdk-ihpsg13g2.spec  debian.changelog  debian.control  debian.copyright  debian.rules  python-no-typehints.patch  replace-python-match.patch  uploadOBS.sh
